# ChangeLog for games-emulation/snes9x-gtk
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  29 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> snes9x-gtk-1.51_p78.ebuild,
  snes9x-gtk-1.52.ebuild:
  Style fixes.

  13 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> snes9x-gtk-1.51_p78.ebuild:
  Fixed license in the old ebuild.

*snes9x-gtk-1.52 (13 Jan 2010)

  13 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> +snes9x-gtk-1.52.ebuild:
  Bumped. Added flags for new audio backends. Will probably need some extra
  work.

  07 Jan 2010; Michał Ziąbkowski <mziab@o2.pl>
  -files/snes9x-gtk-1.51_p61-as-needed.patch,
  -files/snes9x-gtk-1.51_p61-string-literal.patch:
  Purged old patches.

  21 Dec 2009; Michał Ziąbkowski <mziab@o2.pl>
  -snes9x-gtk-1.51_p76.ebuild, -snes9x-gtk-1.51_p77.ebuild:
  Removed cruft.

  08 Oct 2009; Michał Ziąbkowski <mziab@o2.pl>
  +snes9x-gtk-1.51_p78.ebuild:
  Bumped. Added xdg-utils dep to provide screensaver disabling.

  26 Sep 2009; Michał Ziąbkowski <mziab@o2.pl> snes9x-gtk-1.51_p77.ebuild,
  +files/snes9x-gtk-1.51_p75-no-exec-stack.patch:
  Added patch to fix exec stacks.

  26 Sep 2009; Michał Ziąbkowski <mziab@o2.pl>
  +snes9x-gtk-1.51_p77.ebuild:
  Bumped. Dropped as-needed patch.

  11 Sep 2009; Michał Ziąbkowski <mziab@o2.pl>
  -snes9x-gtk-1.51_p73.ebuild, -snes9x-gtk-1.51_p74.ebuild,
  -snes9x-gtk-1.51_p75.ebuild, +snes9x-gtk-1.51_p76.ebuild:
  Bumped. Removed cruft.

  31 Aug 2009; Michał Ziąbkowski <mziab@o2.pl>
  +snes9x-gtk-1.51_p75.ebuild:
  Bumped.

  20 Jul 2009; Michał Ziąbkowski <mziab@o2.pl>
  +snes9x-gtk-1.51_p74.ebuild:
  Bumped.

  02 Jun 2009; Michał Ziąbkowski <mziab@o2.pl>
  -snes9x-gtk-1.51_p70.ebuild, -snes9x-gtk-1.51_p71.ebuild,
  +snes9x-gtk-1.51_p73.ebuild:
  Bumped. Removed cruft.

  25 May 2009; Michał Ziąbkowski <mziab@o2.pl>
  +snes9x-gtk-1.51_p71.ebuild:
  Bumped. Removed gtkglext dep.

  23 Mar 2009; Michał Ziąbkowski <mziab@o2.pl>