@@ -1,7 +1,7 @@
 AUX snes9x-gtk-1.51_p75-no-exec-stack.patch 4807 RMD160 4655cefcbb106a59b6a637ce64707ba86487e850 SHA1 cdbb63e8731df08e21d5184e560987760bcde81b SHA256 1774c5b9820c3f8b207ae7960d549fc8ada97995161f8e498efce0ace38d560d
 DIST snes9x-1.51-src-gtk-78.tar.bz2 894388 RMD160 f48bdf4cf4240f8bf7bca989bd97a971fdf1bde7 SHA1 7d1bde82080f34bf4f16c2012a3bbaa886c6510c SHA256 543001d7a84b05e9bd4159b10bc42f87e36b555ef715e2db1ebaaf1586143c88
 DIST snes9x-1.52-src.tar.bz2 1720137 RMD160 ec7f85058e4571d89a65a89d3f09e2e40db0cbcc SHA1 fb3957b68fcede882518516094a73ec5bbed76cf SHA256 36e09b2da62b9210feb224cfd183047a151a71c1d5e5f92749dc28bd4b7ff1cb
-EBUILD snes9x-gtk-1.51_p78.ebuild 1295 RMD160 604b3e7c4bedcde98d5d319b756fe453e7553f29 SHA1 99b8c500d22cefe39958b77c1edbcd349ce035c5 SHA256 cc1b9e404bf92e41f7ec0de4e98b14c3c3b650e1f9cefead37aa8d7e07c128a3
-EBUILD snes9x-gtk-1.52.ebuild 1411 RMD160 0b96f4ab195efe9b74f39b641f099d74c10bcffa SHA1 06d9611d2019d9162afbcd371530e31ed3bd4ce0 SHA256 554741a87e832d54146cc75cc7e6cc2cf650ac47e2f7bd0767a734b9210c5775
-MISC ChangeLog 3324 RMD160 f472e81945c3e2d41926cc8c23239281a25dfe28 SHA1 a62bf9092cc8ede3739f7f9f7a27c933cdb17067 SHA256 129d6a4a53a7aa79476ba8fde4ea5f63ce4a3170e8e82eba97268b5550484629
+EBUILD snes9x-gtk-1.51_p78.ebuild 1325 RMD160 aac9460b393588ca1372cab4ac71a8a1fe255251 SHA1 a366965a46a6f258a60d0fbd4ba5d971d4881c0f SHA256 39ed4d1d19ceaf078e66bfa24bc6d709d187634ef225f0b35c2d2e3b64014176
+EBUILD snes9x-gtk-1.52.ebuild 1441 RMD160 67c81eb76ff692438ada8a3525e0b17d6dfe3bc8 SHA1 bbee65f95f75bc3e7872047353b711177a31608f SHA256 26408cc910a8b1fd85b9e40c5d364629f9a6871f6a5ff4a7f720fd8589d33d21
+MISC ChangeLog 3479 RMD160 8da148f9f3b980ac0078b41ce26c5bd528a67bdd SHA1 acfe960c9ec4c7b8a380914cfee371bd9312b6d9 SHA256 b226e07cdac3424df870c166b66bd1ab7fe1761853027ab446d9115e4200ea6b
 MISC metadata.xml 429 RMD160 e989b45bc0cab3e17cac7c1be9e1fe9870360f62 SHA1 cb2a3b86ae0263528cc264a49284970ebfb59e34 SHA256 ef699c4686427718434f4be182f5bdd768c54f118cc920224ce0f256aa8390d5
