@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  15 Mar 2010; Michał Ziąbkowski <mziab@o2.pl> snes9x-gtk-1.51_p78.ebuild,
+  snes9x-gtk-1.52.ebuild:
+  Added block to avoid collision with snes9x[gtk].
+
   29 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> snes9x-gtk-1.51_p78.ebuild,
   snes9x-gtk-1.52.ebuild:
   Style fixes.
